--- a/feedforward_neural_network.ipynb
+++ b/feedforward_neural_network.ipynb
@@ -159,6 +159,66 @@
     "plt.show()\n",
     ""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "R4lzR_uEehQD"
+   },
+   "source": [
+    "## DataLoader Implementation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Qg98r6ACehQD"
+   },
+   "source": [
+    "Complete the PointDataset by replacing ```NotImplemented``` with your code\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "id": "hbolS6t8ehQD"
+   },
+   "outputs": [],
+   "source": [
+    "class PointsDataset(Dataset):\n",
+    "    def __init__(self, data, labels):\n",
+    "        self.data = torch.tensor(data, dtype=torch.float)\n",
+    "        self.labels = torch.tensor(labels, dtype=torch.long)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        # Retrieve the point and label at the given index\n",
+    "        point = self.data[index]\n",
+    "        label = self.labels[index]\n",
+    "        return point, label\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        # Return the total number of samples in the dataset\n",
+    "        return len(self.data)\n",
+    "\n",
+    "class PointsDataLoader(DataLoader):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        self.transform = lambda x: x  # No transformation by default\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        for batch in super().__iter__():\n",
+    "            yield self.transform(batch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "fhL4XkNmehQD"
+   },
+   "source": [
+    "## Building the Neural Network\n"
+   ]
   }
  ],
  "metadata": {
