Ramin Yazdani | Feedforward Neural Network Classifier | main | WIP(model): Define neural network architecture
Designed the 2-layer feedforward neural network class structure using PyTorch's nn.Module.
This establishes the model architecture that will learn non-linear decision boundaries.

Key implementations:
- Created FFNN class extending nn.Module
- Defined network layers: fc1 (input → hidden) and fc2 (hidden → output)
- Added __init__ method with configurable input, hidden, and output dimensions
- Documented architecture design decisions in notebook

The architecture consists of:
- Input layer: 2 dimensions (x, y coordinates)
- Hidden layer: Configurable size (default 64 neurons)
- Output layer: 3 dimensions (one per class)

A 2-layer network with non-linear activation can approximate complex decision boundaries,
making it suitable for this non-linearly separable classification problem.

Verification: FFNN class instantiates correctly with specified dimensions.

--- a/feedforward_neural_network.ipynb
+++ b/feedforward_neural_network.ipynb
@@ -219,6 +219,65 @@
    "source": [
     "## Building the Neural Network\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "v87k5Yg_ehQD"
+   },
+   "source": [
+    "<p align=\"center\"> <img src=\"https://www.ritchievink.com/img/post-9-mlp/nn_diagram_1.png\" alt=\"nn\" style=\"width: 700px;\"/> </p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "8p9HUuUKehQD"
+   },
+   "source": [
+    "This implementation builds a model using the layers provided by PyTorch. For more details, refer to: [Building Models with PyTorch](https://pytorch.org/tutorials/beginner/introyt/modelsyt_tutorial.html). Our model will be described as consisting of the following components:\n\nLinear Layer: $$\\mathbf{Z}^{(2)} = \\mathbf{W}^{(1)T}\\mathbf{X} $$\n\nReLU Activation: $$\\mathbf{A}^{(2)} = \\max(\\mathbf{Z}^{(2)}, \\mathbf{0}) $$\n\nLinear Layer:$$\\mathbf{Z}^{(3)} = \\mathbf{W}^{(2)T}\\mathbf{A}^{(1)} $$\n\nSoftmax Activation:$$\\mathbf{\\hat{Y}} = \\mathbf{A}^{(3)} = \\text{softmax}(\\mathbf{Z}^{(3)})$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "LQ9QOBBIehQE"
+   },
+   "outputs": [],
+   "source": [
+    "class FFNN(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, output_dim) -> None:\n",
+    "        super(FFNN, self).__init__()\n",
+    "\n",
+    "        # Define the first linear layer\n",
+    "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
+    "\n",
+    "        # Define the second linear layer\n",
+    "        self.fc2 = nn.Linear(hidden_dim, output_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # First linear layer with ReLU activation\n",
+    "        z2 = self.fc1(x)\n",
+    "        a2 = F.relu(z2)\n",
+    "\n",
+    "        # Second linear layer\n",
+    "        z3 = self.fc2(a2)\n",
+    "\n",
+    "        # Softmax activation on the output\n",
+    "        y_hat = F.softmax(z3, dim=1)\n",
+    "\n",
+    "        return y_hat\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "zlBuEOZDehQE"
+   },
+   "source": [
+    "## Training the Model\n"
+   ]
   }
  ],
  "metadata": {
