--- a/feedforward_neural_network.ipynb
+++ b/feedforward_neural_network.ipynb
@@ -278,6 +278,138 @@
    "source": [
     "## Training the Model\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "aisNVrn0ehQE"
+   },
+   "source": [
+    "Here, we specify the important hyperparameters for training the model as well as provide a function to plot the decision boundary to help visualize the results after training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "id": "benCR5YWehQE"
+   },
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    \"input_dim\": 2,\n",
+    "    \"hidden_dim\": 100,\n",
+    "    \"output_dim\": C,\n",
+    "    \"device\": torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\"),\n",
+    "    \"num_epochs\": 1000,\n",
+    "    \"batch_size\": 300,\n",
+    "    \"learning_rate\": 1,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "id": "tsPGHkj7ehQE"
+   },
+   "outputs": [],
+   "source": [
+    "# Visualize function\n",
+    "def plot_decision_boundary(model, points, labels, title=\"Decision Boundary\"):\n",
+    "    model.eval()\n",
+    "    model.to(\"cpu\")\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "    # Plot the data points\n",
+    "    for label in np.unique(labels):\n",
+    "        label_points = points[labels.flatten() == label]\n",
+    "        plt.scatter(label_points[:, 0], label_points[:, 1], label=('Class ' + str(int(label))))\n",
+    "\n",
+    "    # Create grid to evaluate the model\n",
+    "    x_min, x_max = points[:, 0].min() - 1, points[:, 0].max() + 1\n",
+    "    y_min, y_max = points[:, 1].min() - 1, points[:, 1].max() + 1\n",
+    "    xx, yy = np.meshgrid(np.linspace(x_min, x_max, 100), np.linspace(y_min, y_max, 100))\n",
+    "    X0 = torch.tensor(np.c_[xx.ravel(), yy.ravel()], dtype=torch.float)\n",
+    "    Z = model(X0).argmax(dim=1)\n",
+    "    Z = Z.reshape(xx.shape)\n",
+    "\n",
+    "    # Plot decision boundary\n",
+    "    plt.contourf(xx, yy, Z, alpha=0.2, cmap=plt.cm.coolwarm)\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel(\"X1\")\n",
+    "    plt.ylabel(\"X2\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "-hsMJ3erehQE"
+   },
+   "source": [
+    "<b>(1 point) Complete the train function below to train the model. </b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "gxYPRv9dehQE"
+   },
+   "source": [
+    "For more details, refer to [Training with PyTorch](https://pytorch.org/tutorials/beginner/introyt/trainingyt.html#the-training-loop) for a more detailed understanding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "id": "z0aJQMyMehQE"
+   },
+   "outputs": [],
+   "source": [
+    "def train(config, data, labels):\n",
+    "    # Create dataset and loader\n",
+    "    points_dataset = PointsDataset(data, labels)\n",
+    "    points_dataloader = DataLoader(points_dataset, batch_size=config[\"batch_size\"], shuffle=True)\n",
+    "\n",
+    "    # Initialize the model\n",
+    "    model = FFNN(config[\"input_dim\"], config[\"hidden_dim\"], config[\"output_dim\"])\n",
+    "    model.to(config[\"device\"])\n",
+    "\n",
+    "    # Loss function and optimizer\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr=config[\"learning_rate\"])\n",
+    "\n",
+    "    model.train()\n",
+    "    for epoch in range(config[\"num_epochs\"]):\n",
+    "        running_loss = 0\n",
+    "        correct = 0\n",
+    "\n",
+    "        for batch_point, batch_label in points_dataloader:\n",
+    "            batch_point = batch_point.to(config[\"device\"])\n",
+    "            batch_label = batch_label.to(config[\"device\"])\n",
+    "\n",
+    "            # Forward pass and loss computation\n",
+    "            output = model(batch_point)\n",
+    "            loss = criterion(output, batch_label)\n",
+    "\n",
+    "            # Backpropagation and optimization\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            running_loss += loss.item()\n",
+    "            correct += (output.argmax(1) == batch_label).sum().item()\n",
+    "\n",
+    "        if (epoch + 1) % 100 == 0:\n",
+    "            print(f'Epoch {epoch+1} | Running Loss: {running_loss/len(points_dataloader)} | Accuracy: {correct/len(points_dataset)}')\n",
+    "\n",
+    "    # Plot decision boundary\n",
+    "    plot_decision_boundary(model, data, labels, title=\"Decision Boundaries\")"
+   ]
   }
  ],
  "metadata": {
